--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   url_launcher: ^5.4.10
   intro_slider: ^2.3.1
   html: ^0.14.0+3
+  flutter_staggered_grid_view: ^0.3.2
 
 
 dev_dependencies:
