--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intro_slider: ^2.3.1
   html: ^0.14.0+3
   flutter_staggered_grid_view: ^0.3.2
+  custom_bottom_navigation_bar: ^0.0.1
 
 
 dev_dependencies:
